compiler/src/snapshot_tests/grammar/errors/global_no_type_no_init.tapir
global counter;

fn main() {
    counter = 5;
}
